--- a/package.json
+++ b/package.json
@@ -1,19 +1,42 @@
 {
-  "name": "sfmc-sms-ca",
+  "name": "jb-activity-template",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.html",
+  "description": "Journey Builder Activity Template",
+  "engines": {
+    "node": "6.11.1"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js",
+    "postinstall": "gulp default"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/rbroeder/ca-test.git"
+    "url": "git+https://github.com/rbroeder/test-renato.git"
   },
-  "author": "renato",
+  "keywords": [
+    "journey",
+    "builder",
+    "salesforce marketing cloud",
+    "heroku"
+  ],
+  "author": "Devs United",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/rbroeder/ca-test/issues"
+    "url": "https://github.com/devsutd/journey-builder-activity-template/issues"
   },
-  "homepage": "https://github.com/rbroeder/ca-test#readme"
+  "homepage": "https://github.com/devsutd/journey-builder-activity-template#readme",
+  "dependencies": {
+    "@salesforce-ux/design-system": "^2.14.2",
+    "body-parser": "^1.18.2",
+    "gulp-json-modify": "^1.0.2",
+    "gulp-sourcemaps": "^3.0.0",
+    "errorhandler": "^1.5.0",
+    "express": "^4.15.4",
+    "jsonwebtoken": "^8.0.1",
+    "request": "^2.81.0",
+    "require": "^2.4.20"
+  },
+  "devDependencies": {
+    "gulp": "^4.0.2"
+  }
 }
